buildscript {
    repositories {
        google()
        jcenter()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

    dependencies {
        classpath "com.github.ben-manes:gradle-versions-plugin:0.27.0"
        classpath "gradle.plugin.com.hierynomus.gradle.plugins:license-gradle-plugin:0.15.0"
    }
}

allprojects {
    group = "de.alpharogroup"
    version = "6.6"
}

subprojects {
    apply plugin: "signing"
    apply plugin: "java"
    apply plugin: "jacoco"
    apply plugin: "maven-publish"
    apply plugin: "com.github.ben-manes.versions"
    apply plugin: "com.github.hierynomus.license"

    def releaseVersion = !version.endsWith("SNAPSHOT")

    repositories {
        mavenLocal()
        maven {
            url = "https://repo.maven.apache.org/maven2"
        }
    }

    dependencies {
        compileOnly("org.projectlombok:lombok:$lombokVersion")
        annotationProcessor("org.projectlombok:lombok:$lombokVersion")
        testCompile("org.testng:testng:$testngVersion")
        testCompile("junit:junit:$junitVersion")
        testCompile("org.mockito:mockito-core:$mockitoCoreVersion")
    }

    // workhack for license issue #76
    gradle.startParameter.excludedTaskNames += "licenseMain"
    gradle.startParameter.excludedTaskNames += "licenseTest"

    sourceCompatibility = "1.8"

    javadoc {
        if(JavaVersion.current().isJava9Compatible()) {
            options.addBooleanOption("html5", true)
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }

    test {
        useTestNG()
    }

    test {
        useTestNG()
    }

    jacocoTestReport {
        reports {
            xml.enabled true
            html.enabled false
        }
    }

    check.dependsOn jacocoTestReport

}
